コンセプトを変更

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav id="js-drawer-content" class="header__nav">
           <ul class="header__lists">
             <li class="header__list">
-              <a href="#concept" class="header__link">Concept</a>
+              <a href="#concept" class="header__link">コンセプト</a>
             </li>
             <li class="header__list">
               <a href="#feature" class="header__link">Feature</a>
